# rust-cli

./: Cargo.toml  README.md
src/: main.rs
src/args/: args_parser.rs
src/user/: user_info.rs
src/user-info/: index.rs
